code/dev/css/styles.css
/* ... */
.billing-plan {
  border: 1px solid #4A4F55;
  background: #F5F5F5;
}
.billing-plan:hover {
  -moz-box-shadow: 0 5px 20px 0 #888888;
  -webkit-box-shadow: 0 5px 20px 0 #888888;
  box-shadow: 0 5px 20px 0 #888888;
}
.billing-plan.current {
  -moz-box-shadow: 0 5px 20px 0 #888888;
  -webkit-box-shadow: 0 5px 20px 0 #888888;
  box-shadow: 0 5px 20px 0 #888888;
}
.billing-plan-header {
  color: #fff;
  background-color: #4A4F55;
  padding: 7.5px;
}
.billing-plan-title {
  margin-top: 10px;
}
.billing-plan-ammount {
  color: #f7941e;
}
.billing-plan-services {
  color: #777;
}
.billing-plan-action {
  margin-top: 30px;
  padding: 0 15px 20px;
}
.billing-plan-action button.btn-success,
.billing-plan-action a.btn-success {
  background-color: #FF8A00;
  border-radius: 0;
  width: 170px;
  border: 0;
  outline: none;
}
.billing-plan-details {
  margin: 0 20px;
}
.billing-plan-details h4 {
  color: #424242;
}
.billing-plan-description {
  min-height: 75px;
  color: #777;
}
@media (max-width: 480px) {
  .billing-plan-description {
    min-height: 50px;
  }
}
@media (min-width: 768px) {
  .billing-plan-description {
    min-height: 75px;
  }
}
@media (min-width: 992px) {
  .billing-plan-description {
    min-height: 160px;
  }
}
@media (min-width: 1200px) {
  .billing-plan-description {
    min-height: 140px;
  }
}
.subscribe-contact-info-terms {
  margin: -10px 0 0 47px;
  font-weight: bold;
}
.individual-plan {
  padding: 5px;
  text-align: center;
}
.subscription-summary .stats-highlights-table-row {
  display: table-row;
}
.subscription-summary .col-sm {
  display: table-cell;
  padding-left: 7%;
}
.subscription-summary .stats-heading {
  margin-bottom: 9px;
  padding: 0;
  border-bottom: none;
  color: #888;
  font-weight: bold;
  font-size: 1.16667em;
}
.subscription-summary .btn {
  margin-left: 20px;
}
.time-note-display {
  font-size: 0.9em;
  margin: 10px;
}
.panel .time-note-display {
  font-size: 1.5em;
}
.form--user .loader--waite-company {
  display: block;
  float: left;
}
.form--user .select2-container,
.form--user .loader--waite-company {
  min-width: 550px;
  max-width: 550px;
}
@media (max-width: 425px) {
  .form--user .select2-container,
  .form--user .loader--waite-company {
    min-width: 100%;
  }
}
.introjs-tooltip {
  min-width: 300px;
  font-size: 1.2em;
}
.introjs-tooltipbuttons .introjs-button {
  font: 15px / normal sans-serif;
}
#loading-bar,
#loading-bar-spinner {
  pointer-events: none;
  -webkit-pointer-events: none;
  -webkit-transition: 350ms linear all;
  -moz-transition: 350ms linear all;
  -o-transition: 350ms linear all;
  transition: 350ms linear all;
}
#loading-bar.ng-enter,
#loading-bar.ng-leave.ng-leave-active,
#loading-bar-spinner.ng-enter,
#loading-bar-spinner.ng-leave.ng-leave-active {
  opacity: 0;
}
#loading-bar.ng-enter.ng-enter-active,
#loading-bar.ng-leave,
#loading-bar-spinner.ng-enter.ng-enter-active,
#loading-bar-spinner.ng-leave {
  opacity: 1;
}
#loading-bar .bar {
  -webkit-transition: width 350ms;
  -moz-transition: width 350ms;
  -o-transition: width 350ms;
  transition: width 350ms;
  background: #eb7a55;
  position: fixed;
  z-index: 10002;
  top: 0;
  left: 0;
  width: 100%;
  height: 2px;
  border-bottom-right-radius: 1px;
  border-top-right-radius: 1px;
}
/* Fancy blur effect */
#loading-bar .peg {
  position: absolute;
  width: 70px;
  right: 0;
  top: 0;
  height: 2px;
  opacity: .45;
  -moz-box-shadow: #eb7a55 1px 0 6px 1px;
  -ms-box-shadow: #eb7a55 1px 0 6px 1px;
  -webkit-box-shadow: #eb7a55 1px 0 6px 1px;
  box-shadow: #eb7a55 1px 0 6px 1px;
  -moz-border-radius: 100%;
  -webkit-border-radius: 100%;
  border-radius: 100%;
}
#loading-bar-spinner {
  display: block;
  position: fixed;
  z-index: 10002;
  top: 50%;
  left: 50%;
}
#loading-bar-spinner .spinner-icon {
  width: 32px;
  height: 32px;
  border: solid 4px transparent;
  border-top-color: #eb7a55;
  border-left-color: #eb7a55;
  border-radius: 50%;
  -webkit-animation: loading-bar-spinner 400ms linear infinite;
  -moz-animation: loading-bar-spinner 400ms linear infinite;
  -ms-animation: loading-bar-spinner 400ms linear infinite;
  -o-animation: loading-bar-spinner 400ms linear infinite;
  animation: loading-bar-spinner 400ms linear infinite;
}
@-webkit-keyframes loading-bar-spinner {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}
@-moz-keyframes loading-bar-spinner {
  0% {
    -moz-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -moz-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}
@-o-keyframes loading-bar-spinner {
  0% {
    -o-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -o-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}
@-ms-keyframes loading-bar-spinner {
  0% {
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}
@keyframes loading-bar-spinner {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

